--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
 # PyTorch深度学习超图神经网络 - snoRNA-Disease关联预测
 # HGNN-SDA 环境依赖
 
-# 核心深度学习框架
+# ============================================================
+# 核心依赖
+# ============================================================
+
+# 深度学习框架
 torch>=2.0.0
 torchvision>=0.15.0
 
@@ -19,12 +23,19 @@ seaborn>=0.12.0
 # 进度条
 tqdm>=4.62.0
 
-# RNA预训练模型（用于提取snoRNA序列特征）
-multimolecule>=0.08
+# ============================================================
+# 序列相似性计算（用于构建snoRNA相似性矩阵）
+# ============================================================
 
-# 可选：如果使用GPU加速
-# CUDA 11.8+
-# cuDNN 8.0+
+# Smith-Waterman序列比对（用于snoRNA序列相似性计算）
+parasail>=1.3.0
+
+# ============================================================
+# RNA预训练模型（可选，用于提取snoRNA序列特征）
+# ============================================================
+
+# RNAErnie等RNA语言模型
+multimolecule>=0.08
 
 # ============================================================
 # 安装说明
@@ -34,14 +45,28 @@ multimolecule>=0.08
 #    pip install torch torchvision --index-url https://download.pytorch.org/whl/cpu
 #    pip install -r requirements.txt
 #
-# 2. GPU版本（需要NVIDIA GPU和CUDA）:
+# 2. GPU版本（需要NVIDIA GPU和CUDA 11.8）:
 #    pip install torch torchvision --index-url https://download.pytorch.org/whl/cu118
 #    pip install -r requirements.txt
 #
-# 3. Apple Silicon (M1/M2/M3) Mac:
+# 3. GPU版本（CUDA 12.1）:
+#    pip install torch torchvision --index-url https://download.pytorch.org/whl/cu121
+#    pip install -r requirements.txt
+#
+# 4. Apple Silicon (M1/M2/M3/M4) Mac:
 #    pip install torch torchvision
 #    pip install -r requirements.txt
 #
-# 4. RNAErnie模型下载（可选，用于序列特征提取）:
+# 5. RNAErnie模型下载（可选，用于序列特征提取）:
 #    模型会在首次运行时自动从HuggingFace下载
 #    或手动下载到本地后修改 script/extract_rnaernie_sno.py 中的路径
+#
+# ============================================================
+# 快速安装（一键命令）
+# ============================================================
+#
+# Linux/Mac (GPU):
+#    pip install torch torchvision --index-url https://download.pytorch.org/whl/cu118 && pip install -r requirements.txt
+#
+# Linux/Mac (CPU):
+#    pip install torch torchvision --index-url https://download.pytorch.org/whl/cpu && pip install -r requirements.txt
